--- a/hasil/hasil_belajar.html
+++ b/hasil/hasil_belajar.html
@@ -59,14 +59,14 @@
                                     <div class="card-title-md">
                                         <label for="sekolah">Sekolah : 
                                             <select id="sekolah" name="sekolah" class="mundur" aria-placeholder="-PILIH SEKOLAH-">
-                                                <option value="0" selected="selected">-- PILIH KELAS --</option>
+                                                <option value="0" selected="selected">PILIH SEKOLAH</option>
                                                 <option value="1">SMK Banjarmasin</option>
                                             </select>
                                         </label>
 
                                         <label for="kelas">Kelas : 
                                             <select id="kelas" name="kelas" class="mundur" aria-placeholder="-PILIH KELAS-">
-                                                <option value="0" selected="selected">-- PILIH KELAS --</option>
+                                                <option value="0" selected="selected">PILIH KELAS</option>
                                                 <option value="1">X A</option>
                                                 <option value="2">X B</option>
                                                 <option value="3">X C</option>
