--- a/hasil/index.html
+++ b/hasil/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="row text-center">
         <div class="col-sm mt-2">
-          <a href="hasil_belajar.html" data-toggle="tooltip" data-placement="bottom" title="KI dan KD"><img class="menu mt-5" src="../../assets/img/kd.png" style="max-width: 200px;"></a>
+          <a href="hasil_belajar.html" data-toggle="tooltip" data-placement="bottom" title="KI dan KD"><img class="menu mt-5" src="../../assets/img/nilai.png" style="max-width: 200px;"></a>
         </div>
       </div>
     </div>
